[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/AI.gd" type="Script" id=2]

[node name="AI" type="Node2D"]
script = ExtResource( 2 )

[node name="Tick" type="Timer" parent="."]
wait_time = 0.25

[node name="FleeTick" type="Timer" parent="."]
wait_time = 0.25

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 6

[node name="FleeRays" type="Node2D" parent="."]

[node name="FleeRay0" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay0"]
position = Vector2( 150, 0 )

[node name="FleeRay1" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay1"]
position = Vector2( 150, 0 )

[node name="FleeRay2" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay2"]
position = Vector2( 150, 0 )

[node name="FleeRay3" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay3"]
position = Vector2( 150, 0 )

[node name="FleeRay4" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay4"]
position = Vector2( 150, 0 )

[node name="FleeRay5" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay5"]
position = Vector2( 150, 0 )

[node name="FleeRay6" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay6"]
position = Vector2( 150, 0 )

[node name="FleeRay7" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 150, 0 )
collision_mask = 6

[node name="Pos" type="Position2D" parent="FleeRays/FleeRay7"]
position = Vector2( 150, 0 )

[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
[connection signal="timeout" from="FleeTick" to="." method="_on_FleeTick_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
